--- a/style.css
+++ b/style.css
@@ -1,13 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto&display=swap');
 
 :root {
-    --first-color: #665341;
-    --second-color: #B0A491;
-    --third-color: #D1E2E3;
-    --fourth-color: #A9D4D9;
-    --fifth-color: #80C4C9;
+    --first-color: #0D0D0D;
+    --second-color: #F2F2F2;
+    --third-color: #A6A397;
+    --fourth-color: #595646;
+    --fifth-color: #BFBFBF;
 }
 
 * {
     box-sizing: border-box;
+}
+
+body {
+    background: var(--first-color) url('image/numbers.jpg') no-repeat left center/cover;
+    min-height: 100vh;
+    color: var(--second-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+body::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(89, 86, 70, 0.8);
+}
+
+body * {
+    z-index: 1;
+}
+
+h1 {
+    font-family: 'Abril Fatface', cursive;
+}
+
+h1,
+h3 {
+    margin-bottom: 0;
+}
+
+i {
+    font-size: 200px;
+}
+
+p {
+    line-height: 1.5;
+    margin: 0;
+}
+
+.play-again {
+    padding: 8px 15px;
+    border: 0;
+    background: var(--first-color);
+    color: var(--second-color);
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+.msg {
+    font-size: 1.5em;
+    margin-top: 40px;
+}
+
+.box {
+    border: 1px solid var(--fifth-color);
+    display: inline-block;
+    font-size: 30px;
+    margin: 20px;
+    padding: 10px;
 }
